# llm-chess

./: .gitignore  README.md  pyproject.toml  requirements.txt
.llm_chess/: leaderboard.json  models.json
src/llm_chess/: __init__.py  cli.py  web.py
src/llm_chess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_chess/chess_transformer/: __init__.py  __main__.py  data_processing.py  dataset.py  evaluate.py  generate_games.py  material_test.py  model_architecture.py  player.py  train.py
src/llm_chess/web/: index.html  leaderboard.html  pieces.html
src/llm_chess/web/static/: app.js  pieces.js  styles.css
